Prevent modal screen overflow
fixes #288

--- a/core/src/main/web/app/styles/ui.scss
+++ b/core/src/main/web/app/styles/ui.scss
@@ -92,3 +92,8 @@
   font-size: 150%;
   vertical-align: -2px;
 }
+
+html .modal {
+  max-height: 80%;
+  overflow: auto;
+}
